--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "bulma": "^0.9.4",
     "framer-motion": "^6.2.8",
     "nodemon": "^2.0.15",
     "react": "^18.0.0",
